# RustInAction

./: README.md
ch02/introducing_vec/: Cargo.toml
ch02/mandelbrot/: Cargo.toml
ch02/with_regex/: Cargo.toml
ch03/globalerror/: Cargo.toml
ch03/not_quite_file_1/: Cargo.toml
ch03/parse_log/: Cargo.toml
ch04/check-sats-1/: Cargo.toml
ch05/endianness/: Cargo.toml
ch05/f32-as-u32/: Cargo.toml
ch05/impossible-add/: Cargo.toml
ch05/mock_rand/: Cargo.toml
ch05/visualizing-f32/: Cargo.toml
ch06/cstr/: Cargo.toml
ch06/meminfo-win/: Cargo.toml
ch06/memscan-3/: Cargo.toml
ch06/particles/: Cargo.toml  alloc.tsv
ch06/pointer-intro/: Cargo.toml
ch06/raw_pointer/: Cargo.toml
ch07/actionkv/: Cargo.toml  db.db
ch07/actionkv/src/: akv_disk.rs  akv_mem.rs  lib.rs
ch07/fview-str/: Cargo.toml
ch07/paritybit/: Cargo.toml
ch07/serde-eg/: Cargo.toml
ch07/voc/: Cargo.toml
ch07/write123/: Cargo.toml
ch08/macgen/: Cargo.toml
ch08/mget/: Cargo.toml
ch08/mget/src/: args.rs  dns.rs  errors.rs  ethernet.rs  http.rs  lib.rs  main.rs
ch08/resolve/: Cargo.toml
ch08/rpg/: Cargo.toml
ch08/simple/: Cargo.toml
ch08/wraperror/: Cargo.toml
ch09/clock/: Cargo.toml
ch09/clock/src/: clock.rs  command.rs  lib.rs  main.rs  ntp.rs
ch09/clock0/: Cargo.toml
ch10/busythreads/: result.tsv
ch10/channels-intro/: Cargo.toml
ch10/multijoin/: Cargo.toml  result.tsv
ch10/render-hex-parallel-iterator/: Cargo.toml
ch11/fledgeos/: Cargo.toml
ch11/fledgeos/.cargo/: config.toml
ch11/fledgeos/src/: main.rs
ch12/ignore/: README.md  (+1 more)
complex/: Cargo.toml
(+69 files in other folders)
