[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = { version = "1.5" }
clap = { version = "4.5" }
crc = { version = "3.2" }
serde = { version = "1.0", features = ["derive"] }

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"
