[package]
name = "mget"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5" }
hickory-client = { version = "0.24" }
rand = { version = "0.8.5" }
url = { version = "2.5" }
smoltcp = { version = "0.12" }
tokio = { version = "1.4", features = ["net", "macros", "rt-multi-thread"] }

[lib]
name = "libmget"
