[package]
name = "clock"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39" }
clap = { version = "4.5" }
byteorder = { version = "1.5" }

[lib]
name = "libclock"

[target.'cfg(not(windows))'.dependencies]
libc = { version = "0.2.169" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9" }
kernel32-sys = { version = "0.2.2" }
