[package]
name = "fledgeos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9" }
x86_64 = { version = "=0.14" }   # 최신버전인 0.15를 지정하면 오류가 발생한다.

[package.metadata.bootimage]
build-command = ["build"]

run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
